--- a/ui/package.json
+++ b/ui/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@nextui-org/system": "^2.0.15",
+    "@nextui-org/theme": "^2.1.17",
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
